--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "require": {
         "php": ">=5.5.9",
         "nesbot/carbon": "^1.0",
+        "illuminate/support": "^5.0",
         "illuminate/contracts": "^5.0"
     },
     "require-dev": {
